fixed google analytics, small changes

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -5,7 +5,7 @@
     - name: Barry Eichengreen
       link: https://eml.berkeley.edu/~eichengr/
     - name: Mingyang (Chris) Liu
-  abstract: This paper examines the international financial consequences of Brexit.It first pro- vides a survey of the still limited literature on EU membership and international capital flows. It then provides new estimates of the impact of Brexit on cross-border investment utilizing data from the IMF’s Consolidated Portfolio Investment Survey. It lastly provides a comparative analysis of these same issues using data on cross- border capital flows from the BIS. The conclusion is that the impact on cross-border capital flows to and from the UK is likely to be substantial.
+  abstract: This paper examines the international financial consequences of Brexit. It first provides a survey of the still limited literature on EU membership and international capital flows. It then provides new estimates of the impact of Brexit on cross-border investment utilizing data from the IMF’s Consolidated Portfolio Investment Survey. It lastly provides a comparative analysis of these same issues using data on cross- border capital flows from the BIS. The conclusion is that the impact on cross-border capital flows to and from the UK is likely to be substantial.
 # - title: Second pub
 #   coauthors:
 #     - name: c
