--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ blank_title: true
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
+  - jekyll-seo-tag
 
 # https://github.com/github/pages-gem/issues/399#issuecomment-301827749
 # When running locally, we run into the following error —
