added google verification

--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ sidebar:
     link: https://scholar.google.com/
     target: _blank # opens in new tab
 
+# verfiy with google
+google_site_verification: KPxAS1UJmKx_8lgX4sFOD_k775zIPkjv0L0qBfwz5Gk
 
 # Exclude from processing.
 # The following items will not be processed, by default.
