--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,8 @@ sidebar:
 # verfiy with google
 google_site_verification: KPxAS1UJmKx_8lgX4sFOD_k775zIPkjv0L0qBfwz5Gk
 
+author: William Jungerman
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
