--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,19 @@
 # in the templates via {{ site.myvariable }}.
 
 title: William Jungerman
-# email: william dot jungerman at gmail dot com
+author:
+  name: William Jungerman
 logo: /assets/img/tmp.jpg
 # description: >- # this means to ignore newlines until "baseurl:"
 #   PhD candidate in Economics at the University of Minnesota, Twin Cities.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://williamjungerman.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+# ga
 google_analytics: G-2V6JDDPHCE
 
+# verfiy with google
+google_site_verification: KPxAS1UJmKx_8lgX4sFOD_k775zIPkjv0L0qBfwz5Gk
 
 # Build settings
 remote_theme: BDHU/minimalist
@@ -37,6 +42,7 @@ plugins:
   - jekyll-feed
   - jekyll-remote-theme
   - jekyll-seo-tag
+  - jekyll-sitemap
 
 # https://github.com/github/pages-gem/issues/399#issuecomment-301827749
 # When running locally, we run into the following error —
@@ -62,11 +68,6 @@ sidebar:
     icon: <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" style="vertical-align:-0.125em;" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M5.242 13.769L0 9.5L12 0l12 9.5l-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14a7 7 0 0 0 0-14z" fill="currentColor"/></svg>
     link: https://scholar.google.com/
     target: _blank # opens in new tab
-
-# verfiy with google
-google_site_verification: KPxAS1UJmKx_8lgX4sFOD_k775zIPkjv0L0qBfwz5Gk
-
-author: William Jungerman
 
 # Exclude from processing.
 # The following items will not be processed, by default.
