changed picture and added pc

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: William Jungerman
 author:
   name: William Jungerman
-logo: /assets/img/tmp.jpg
+logo: /assets/img/headshot.jpg
 # description: >- # this means to ignore newlines until "baseurl:"
 #   PhD candidate in Economics at the University of Minnesota, Twin Cities.
 baseurl: "" # the subpath of your site, e.g. /blog
