--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ github: [metadata]
 
 sidebar:
   - name: Curriculum Vitae
-    # link: 
+    link: /assets/papers/cv.pdf
     target: _blank # opens in new tab
   - name: Research
     link: \#research
@@ -64,10 +64,10 @@ sidebar:
     icon: <i class="fa-brands fa-github"></i>
     link: https://github.com/williamjungerman
     target: _blank # opens in new tab
-  - name: Google Scholar
-    icon: <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" style="vertical-align:-0.125em;" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M5.242 13.769L0 9.5L12 0l12 9.5l-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14a7 7 0 0 0 0-14z" fill="currentColor"/></svg>
-    link: https://scholar.google.com/
-    target: _blank # opens in new tab
+  # - name: Google Scholar
+  #   icon: <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" style="vertical-align:-0.125em;" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M5.242 13.769L0 9.5L12 0l12 9.5l-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14a7 7 0 0 0 0-14z" fill="currentColor"/></svg>
+  #   link: https://scholar.google.com/
+  #   target: _blank # opens in new tab
 
 # Exclude from processing.
 # The following items will not be processed, by default.
