--- a/_data/workingpapers.yml
+++ b/_data/workingpapers.yml
@@ -1,4 +1,4 @@
-- title: Dynamic Monopsony and Human Capital (JMP)
+- title: Dynamic Monopsony and Human Capital
   link: /assets/papers/JMP_Jungerman.pdf
   bibtex: |
     @unpublished{
