--- a/_data/workingpapers.yml
+++ b/_data/workingpapers.yml
@@ -4,7 +4,7 @@
       link: https://jacobadenbaum.github.io/
     - name: Fil Babalievsky
       link: http://fil-babalievsky.squarespace.com/
-  link: /assets/papers/Learning_on_the_Job.pdf
+  link: https://jacobadenbaum.github.io/files/AdenbaumBabalievskyJungerman2024.pdf
   bibtex: |
     @unpublished{
       Learning_on_the_Job,
