updated paper link

--- a/_data/workingpapers.yml
+++ b/_data/workingpapers.yml
@@ -4,7 +4,7 @@
       link: https://jacobadenbaum.github.io/
     - name: Fil Babalievsky
       link: http://fil-babalievsky.squarespace.com/
-  link: https://jacobadenbaum.github.io/files/AdenbaumBabalievskyJungerman2024.pdf
+  link: https://jacobadenbaum.github.io/Learning_on_the_Job/
   bibtex: |
     @unpublished{
       Learning_on_the_Job,
